unpackaged/main/default/objects/OlgaStagingTable__c/OlgaStagingTable__c.object-meta.xml
<CustomObject>
    <label>OlgaStagingTable</label>
    <nameField>
        <displayFormat>OST-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OlgaStagingTable</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>