unpackaged/main/default/objects/OlgaStagingTable__c/fields/active_subscription_date__c.field-meta.xml
<CustomField>
    <fullName>active_subscription_date__c</fullName>
    <label>active subscription date</label>
    <type>DateTime</type>
</CustomField>