unpackaged/main/default/objects/OlgaStagingTable__c/fields/alternate_address__c.field-meta.xml
<CustomField>
    <fullName>alternate_address__c</fullName>
    <label>alternate address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>