unpackaged/main/default/objects/OlgaStagingTable__c/fields/Alternate_phone__c.field-meta.xml
<CustomField>
    <fullName>Alternate_phone__c</fullName>
    <label>Alternate phone</label>
    <type>Phone</type>
</CustomField>