unpackaged/main/default/objects/OlgaStagingTable__c/fields/BrandId__c.field-meta.xml
<CustomField>
    <fullName>BrandId__c</fullName>
    <label>BrandId</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brand_Id</valueSetName>
    </valueSet>
</CustomField>