unpackaged/main/default/objects/OlgaStagingTable__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>OlgaStagingTable (Contact)</relationshipLabel>
    <relationshipName>OlgaStagingTable1</relationshipName>
    <type>Lookup</type>
</CustomField>