unpackaged/main/default/objects/OlgaStagingTable__c/fields/MultiMatchedContactsData__c.field-meta.xml
<CustomField>
    <fullName>MultiMatchedContactsData__c</fullName>
    <label>MultiMatchedContactsData</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>