unpackaged/main/default/objects/OlgaStagingTable__c/fields/Other_phone__c.field-meta.xml
<CustomField>
    <fullName>Other_phone__c</fullName>
    <label>Other phone</label>
    <type>Phone</type>
</CustomField>