unpackaged/main/default/objects/OlgaStagingTable__c/fields/possible_fraud__c.field-meta.xml
<CustomField>
    <fullName>possible_fraud__c</fullName>
    <defaultValue>false</defaultValue>
    <label>possible fraud</label>
    <type>Checkbox</type>
</CustomField>