unpackaged/main/default/objects/OlgaStagingTable__c/fields/ZdBrandName__c.field-meta.xml
<CustomField>
    <fullName>ZdBrandName__c</fullName>
    <label>ZdBrandName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>