unpackaged/main/default/objects/OlgaStagingTable__c/fields/ZdMultiMatchedContactIds__c.field-meta.xml
<CustomField>
    <fullName>ZdMultiMatchedContactIds__c</fullName>
    <description>During migration, if Zendesk customer matches with multiple SFSC contacts, this field will have list of those ids.</description>
    <label>ZdMultiMatchedContactIds</label>
    <type>TextArea</type>
</CustomField>