unpackaged/main/default/objects/OlgaStagingTable__c/fields/ZdNewContact__c.field-meta.xml
<CustomField>
    <fullName>ZdNewContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>OlgaStagingTable</relationshipLabel>
    <relationshipName>OlgaStagingTable</relationshipName>
    <type>Lookup</type>
</CustomField>