unpackaged/main/default/objects/OlgaStagingTable__c/fields/ZdTnCUserId__c.field-meta.xml
<CustomField>
    <fullName>ZdTnCUserId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ZdTnCUserId</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>