unpackaged/main/default/objects/OlgaStagingTable__c/fields/ZdUniqueMatchedContactId__c.field-meta.xml
<CustomField>
    <fullName>ZdUniqueMatchedContactId__c</fullName>
    <description>If Zd customer matches with a unique SFSC customer, this field will hold its id value.</description>
    <label>ZdUniqueMatchedContactId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>